--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,25 +2,50 @@
 <html xmlns:th="http://www.thymeleaf.org">
 	<div th:replace="../fragments/header :: header"></div>
 	<body>
-		<form action="/greeting">
+		<form th:action="@{/greeting}">
 			<input type="text" name="name" />
 			<button type="submit" class="btn btn-primary">Primary</button>
 		</form>
+		<div class="container unauthenticated">
+			With Facebook: <a href="/login">click here</a>
+		</div>
+		<div class="container authenticated">
+			Logged in as: <span id="user"></span>
+			<div>
+				<button onClick="logout()" class="btn btn-primary">Logout</button>
+			</div>
+		</div>
 		<script>
-			fetch(
-				'http://localhost:8080/api', 
-				{
-					method: 'POST', 
-					body: 'thisbody'
-				}
-			)
-			.then((response)=>{
-				console.log("fetched");
-				response.json()
-				.then(data=>{
-					console.log(data);
-				});
+			$(".authenticated").hide();
+			$.get("/user", (data)=>{
+				$("#user").html(data.userAuthentication.details.name);
+				$(".unauthenticated").hide();
+				$(".authenticated").show();
 			});
+			
+			var logout = function(){
+				$.post("/logout", ()=>{
+					$("#user").html("");
+					$(".unauthenticated").show();
+					$(".authenticated").hide();
+				});
+				return true;
+			}
+			$.ajaxSetup({
+				beforeSend: (xhr, settings)=> {
+					if ( settings.type == "POST" 
+						|| settings.type == "PUT"
+						|| settings.type == "DELETE" )
+					{
+					    if ( !( /^http:.*/.test(settings.url) || /^https:.*/.test(settings.url) ) ) {
+							xhr.setRequestHeader(
+									"X-XSRF-TOKEN", 
+									Cookies.get("XSRF-TOKEN")
+								);
+						}
+					}
+				}
+			})
 		</script>
 	</body>
 </html>
